src/scss/obsidian/lists.scss
body {
	--list-indent: 1.5em;
	--list-spacing: 0.075em;
	--list-marker-color: var(--text-faint);
	--list-marker-color-hover: var(--text-muted);
	--list-marker-color-collapsed: var(--interactive);
	--list-bullet-border: none;
	--list-bullet-radius: 0;
	--list-bullet-size: 4px;
	--list-bullet-transform: translateY(1px);
}

body {
	--list-bullet-width-em-dash: 10px;
	--list-bullet-height-em-dash: 1.5px;

	--list-bullet-width-hyphen: 5px;
	--list-bullet-height-hyphen: 1.5px;

	--list-bullet-width-bullet-operator: 1px;
	--list-bullet-height-bullet-operator: 1px;

	--list-bullet-size-ring: 3px;

	--list-bullet-width-triangle: 0px;
	--list-bullet-height-triangle: 0px;

	--list-bullet-border-triangle: 3px;
	--list-bullet-width-triangle: 6px;

	--checklist-done-decoration: line-through;
	--checklist-done-color: var(--text-faint);
	--checklist-done-strike-color: var(--text-faint);
}

/*	Task Lists
—————————————————————————————————————————————————————————*/
ul > li.task-list-item[data-task="x"] {
	text-decoration-color: var(--checklist-done-strike-color);
}

ul > li.task-list-item[data-task="X"] {
	text-decoration: unset;
	color: unset;
}

/*	Unordered List Markers
—————————————————————————————————————————————————————————*/
:is(body, .default-marker-odd) ul > li .list-bullet:after,//lvl1
:is(body, .default-marker-odd) ol > li > ul > li .list-bullet:after,
:is(body, .default-marker-odd) ul > li > ul > li> ul > li .list-bullet:after,//lvl3
:is(body, .default-marker-odd) ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after,//lvl5
:is(body, .default-marker-odd) ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after,//lvl7
:is(body, .default-marker-odd) ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after { //lvl9 
	--list-bullet-radius: 0;

	border: none;
	background-color: var(--list-marker-color);
	width: var(--list-bullet-width-em-dash);
	height: var(--list-bullet-height-em-dash);
	transform: var(--list-bullet-transform);
}

:is(body, .default-marker-even) ul > li > ul > li .list-bullet::after,//lvl2
:is(body, .default-marker-even) ol > li > ul > li > ul > li .list-bullet::after,
:is(body, .default-marker-even) ul > li > ul > li > ul > li > ul > li .list-bullet::after,//lvl4
:is(body, .default-marker-even) ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after,//lvl6
:is(body, .default-marker-even) ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after,//lvl8
:is(body, .default-marker-even) ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after { //lvl 10
	--list-bullet-radius: 0;

	border: none;
	background-color: var(--list-marker-color);
	width: var(--list-bullet-size);
	height: var(--list-bullet-size);
	transform: var(--list-bullet-transform);
}

/*	Ordered List Markers
—————————————————————————————————————————————————————————*/
ol,
ol ol ol,
ol ol ol ol ol,
ol ol ol ol ol ol ol,
ol ol ol ol ol ol ol ol ol {
	list-style-type: decimal;
}

ol ol,
ol ol ol ol,
ol ol ol ol ol ol,
ol ol ol ol ol ol ol ol,
ol ol ol ol ol ol ol ol ol ol {
	list-style-type: lower-alpha;
}

/*	Live Preview Unordered List Marker
—————————————————————————————————————————————————————————*/

.markdown-source-view.mod-cm6 .list-bullet:after {
	--list-bullet-radius: 50%;

	border-radius: var(--list-bullet-radius);
	width: var(--list-bullet-size);
	height: var(--list-bullet-size);
	border: var(--list-bullet-border);
}


/*	Style Settings Options
—————————————————————————————————————————————————————————*/

/*	Style Settings Options
—————————————————————————————————————————————————————————*/

.step-list-0 ol {
	list-style-type: none;
}
.step-list-0 ol {
	counter-reset: decimal;
}
.step-list-0 ol > li::before {
	content: "Step " counters(decimal, ".") ": ";
	counter-increment: decimal;
	color: var(--text-faint);
	margin-left: -1.1em;
}

.step-list-1 ol {
	list-style-type: none;
}
.step-list-1 ol {
	counter-reset: decimal;
}
.step-list-1 ol > li::before {
	content: counters(decimal, ".") ". ";
	counter-increment: decimal;
	color: var(--text-faint);
	margin-left: -1.1em;
}


/*	Hyphen
—————————————————————————————————————————————————————————*/
.alternate-marker-odd-1 ul > li .list-bullet:after,
.alternate-marker-odd-1 ol > li > ul > li .list-bullet:after,
.alternate-marker-odd-1 ul > li > ul > li> ul > li .list-bullet:after,
.alternate-marker-odd-1 ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after,
.alternate-marker-odd-1 ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after,
.alternate-marker-odd-1 ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet:after,
.alternate-marker-even-2 ul > li > ul > li .list-bullet::after,
.alternate-marker-even-2 ol > li > ul > li > ul > li .list-bullet::after,
.alternate-marker-even-2 ul > li > ul > li > ul > li > ul > li .list-bullet::after,
.alternate-marker-even-2 ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after,
.alternate-marker-even-2 ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after,
.alternate-marker-even-2 ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li .list-bullet::after {
	--list-bullet-radius: 0;

	width: var(--list-bullet-width-hyphen);
	height: var(--list-bullet-height-hyphen);
}
/* ... */

